--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "scripts": {
     "dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
+  },
+  "dependencies": {
+    "vuepress-theme-reco": "^1.1.4"
   }
 }
